--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hola mundo
-        
-    </p>
+    <p>Hola mundo</p>
+    <p>Primer cambio del archivo de pruebas de github</p>
 </body>
 </html>
